--- a/taco-cloud/src/main/pom.xml
+++ b/taco-cloud/src/main/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>1.4.2.RELEASE</version>
+            <version>[4.3.17,)</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
